--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ Password = ${SFTP_PASS}
 
 # ---------- CHEMINS DISTANTS ---------- #
 [REMOTE_PATHS]
-WorldRoot     = /home/container/world
+WorldRoot     = /Minecraft/world
 Advancements  = {WorldRoot}/advancements
 Playerdata    = {WorldRoot}/playerdata
 CobblemonData = {WorldRoot}/cobblemonplayerdata
@@ -45,5 +45,6 @@ Height     = 1
 ImagePath  = images/top3.png
 Leaderboards = minecraft:pokemon_registered
 Titles     = Leaderboard
+
 
 
