--- a/config.ini
+++ b/config.ini
@@ -14,10 +14,10 @@ mode = sftp
 
 # ---------- SFTP (utilise les secrets GitHub Actions) ---------- #
 [SFTP]
-Host     = ${SFTP_HOST}
+Host     = 109.239.157.170
 Port     = 22
-User     = ${SFTP_USER}
-Password = ${SFTP_PASS}
+User     = 71749-File
+Password = File
 
 # ---------- CHEMINS DISTANTS ---------- #
 [REMOTE_PATHS]
@@ -45,6 +45,7 @@ Height     = 1
 ImagePath  = images/top3.png
 Leaderboards = minecraft:pokemon_registered
 Titles     = Leaderboard
+
 
 
 
