--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 # ---------- GITHUB ---------- #
 [GITHUB]
-RepoOwner = NeliKkTv
+RepoOwner = NeliKkTwitch
 RepoName  = cobbledex-leaderboardV4
 Branch    = main
 
@@ -14,10 +14,10 @@ mode = sftp
 
 # ---------- SFTP (utilise les secrets GitHub Actions) ---------- #
 [SFTP]
-Host     = 109.239.157.170
+Host     = ${SFTP_HOST}
 Port     = 22
-User     = 71749-File
-Password = File
+User     = ${SFTP_USER}
+Password = ${SFTP_PASS}
 
 # ---------- CHEMINS DISTANTS ---------- #
 [REMOTE_PATHS]
@@ -45,7 +45,3 @@ Height     = 1
 ImagePath  = images/top3.png
 Leaderboards = minecraft:pokemon_registered
 Titles     = Leaderboard
-
-
-
-
