Restore config file with updated structure

--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ Port = 22
 # Ne mets pas ces fichiers dans le repo public : ajoute-les dans le dossier d'exécution GitHub Actions ou sur ton PC.
 #
 # Chemin vers le dossier racine du serveur (celui contenant world/, stats/, cobblemonplayerdata/, etc.)
-FTPPath = /Minecraft/world
+FTPPath = /
 
 
 [GITHUB]
@@ -56,3 +56,4 @@ Height = 1
 ImagePath = images/top3.png
 Leaderboards = vanilla/minecraft:custom/minecraft:pokemon_registered
 Titles = Leaderboard
+
