--- a/.github/workflows/cron15.yml
+++ b/.github/workflows/cron15.yml
@@ -1,8 +1,12 @@
 name: cron15
+
 on:
   schedule:
-    - cron: "*/15 * * * *"
-  workflow_dispatch:
+    - cron: "*/15 * * * *"   # toutes les 15 minutes (UTC)
+  workflow_dispatch:         # lance aussi à la main
+
+permissions:
+  contents: write            # autorise le push avec GITHUB_TOKEN
 
 jobs:
   run:
@@ -15,107 +19,96 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      # (Optionnel) Vérifie que secrets/vars existent (n'imprime rien de sensible)
-      - name: Sanity check secrets/vars
+      # Crée username.txt / password.txt à partir des SECRETS si présents.
+      # (Si tu as déjà ces fichiers dans le repo/runner, on ne les touche pas.)
+      - name: Prepare SFTP credential files
+        env:
+          SFTP_USER: ${{ secrets.SFTP_USER }}
+          SFTP_PASS: ${{ secrets.SFTP_PASS }}
         run: |
-          test -n "${{ secrets.SFTP_PASS }}" || (echo "❌ Secret SFTP_PASS manquant"; exit 1)
-          test -n "${{ secrets.DISCORD_WEBHOOK_URL }}" || (echo "❌ Secret DISCORD_WEBHOOK_URL manquant"; exit 1)
-          test -n "${{ vars.SFTP_HOST }}" || (echo "❌ Var SFTP_HOST manquante"; exit 1)
-          test -n "${{ vars.SFTP_PORT }}" || (echo "❌ Var SFTP_PORT manquante"; exit 1)
-          test -n "${{ vars.SFTP_USER }}" || (echo "❌ Var SFTP_USER manquante"; exit 1)
-          test -n "${{ vars.SFTP_REMOTE_DIR }}" || (echo "❌ Var SFTP_REMOTE_DIR manquante"; exit 1)
+          set -e
+          if [ -n "${SFTP_USER}" ] && [ ! -f username.txt ]; then
+            echo -n "${SFTP_USER}" > username.txt
+          fi
+          if [ -n "${SFTP_PASS}" ] && [ ! -f password.txt ]; then
+            echo -n "${SFTP_PASS}" > password.txt
+          fi
+          ls -l username.txt password.txt || echo "⚠️ username.txt / password.txt non présents"
 
-      ####################################################################
-      # 🔧 Génère config.ini à partir des Variables + Secrets GitHub
-      ####################################################################
-      - name: Générer config.ini depuis variables + secrets
+      # (Optionnel) Affiche les 20 premières lignes du config.ini pour vérifier
+      - name: Show config.ini head (debug)
         run: |
-          cat > config.ini << 'EOF'
-          [GITHUB]
-          Enable=false
-          Token=
-          RepoOwner=NeliKkTwitch
-          RepoName=cobbledex-leaderboardV4
-          Branch=main
+          sed -n '1,120p' config.ini || true
 
-          [MODE]
-          mode=sftp
-
-          [SFTP]
-          host=${{ vars.SFTP_HOST }}
-          port=${{ vars.SFTP_PORT }}
-          username=${{ vars.SFTP_USER }}
-          password=${{ secrets.SFTP_PASS }}
-          remote_root=${{ vars.SFTP_REMOTE_DIR }}
-
-          [LEADERBOARD]
-          Enable=true
-          category=minecraft:custom
-          subcategory=minecraft:pokemon_registered
-          CreateCSV=true
-          CSVPath=total.csv
-          CreateCSVMoney=false
-          CSVPathMoney=money.csv
-
-          [TOPIMAGE]
-          Enable=true
-          NDplayers=30
-          Width=3
-          Height=1
-          ImagePath=images/top3.png
-          Titles=Leaderboard - RANKS 1-10,Leaderboard - RANKS 11-20,Leaderboard - RANKS 21-30
-          Leaderboards=vanilla/minecraft:custom/minecraft:pokemon_registered,vanilla/minecraft:custom/minecraft:pokemon_registered,vanilla/minecraft:custom/minecraft:pokemon_registered
-          EOF
-          echo "✅ Fichier config.ini généré."
-
-      - name: Run python main.py
+      # Exécute ton script avec le token GitHub auto disponible en env (Token=auto)
+      - name: Run main.py
+        env:
+          GH_TOKEN: ${{ github.token }}     # ton script peut lire GH_TOKEN ou GITHUB_TOKEN
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
-          echo "Lancement du script…"
+          set -e
           python main.py
 
+      # Commit & push uniquement s'il y a des changements (image/CSV)
       - name: Commit & push changes (if any)
+        id: commit
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add images/top3.png total.csv || true
+          set -e
+          git config user.name  "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A
           if git diff --cached --quiet; then
-            echo "Aucun changement à valider."
-          else
-            git commit -m "Auto-update leaderboard + image"
-            git push
+            echo "committed=false" >> "$GITHUB_OUTPUT"
+            echo "Aucun changement à committer."
+            exit 0
           fi
+          git commit -m "Auto-update leaderboard from cron: ${GITHUB_RUN_ID}"
+          git push
+          echo "committed=true" >> "$GITHUB_OUTPUT"
 
-      - name: Purger le cache jsDelivr + réchauffer
+      # Purge le cache jsDelivr et "réchauffe" l'URL (uniquement si commit)
+      - name: Purge jsDelivr cache + warm
+        if: steps.commit.outputs.committed == 'true'
         run: |
           set -e
-          FILE="images/top3.png"
-          URL="https://cdn.jsdelivr.net/gh/NeliKkTwitch/cobbledex-leaderboardV4@main/${FILE}"
-          PURGE="https://purge.jsdelivr.net/gh/NeliKkTwitch/cobbledex-leaderboardV4@main/${FILE}"
+          FILE="images/top3.png"   # doit correspondre à ImagePath de ton config.ini
+          REPO="${{ github.repository }}"
+          CDN="https://cdn.jsdelivr.net/gh/${REPO}@main/${FILE}"
+          PURGE="https://purge.jsdelivr.net/gh/${REPO}@main/${FILE}"
 
-          echo "Purge jsDelivr: $PURGE"
-          curl -sS "$PURGE" > /dev/null
+          echo "Purge: $PURGE"
+          curl -sS "$PURGE" > /dev/null || true
+          sleep 2
+          echo "Warm:  $CDN"
+          curl -sI "$CDN" | sed -n '1,20p' || true
 
-          echo "Pause 3s..."
-          sleep 3
-
-          echo "Warm jsDelivr: $URL"
-          curl -sI "$URL" | sed -n '1,2p'
-
-      - name: Notifier Discord avec lien FIXE + aperçu rafraîchi
+      # Envoi Discord (optionnel) avec lien FIXE + aperçu rafraîchi
+      - name: Notify Discord (fixed link + fresh preview)
+        if: steps.commit.outputs.committed == 'true' && secrets.DISCORD_WEBHOOK_URL != ''
         env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: |
           set -e
-          URL="https://cdn.jsdelivr.net/gh/NeliKkTwitch/cobbledex-leaderboardV4@main/images/top3.png"
-          payload=$(jq -n --arg content "**Leaderboard mis à jour !** 🏆\n$URL" '{content: $content}')
-          curl -H "Content-Type: application/json" -d "$payload" "$DISCORD_WEBHOOK_URL"
+          REPO="${{ github.repository }}"
+          FIX_URL="https://cdn.jsdelivr.net/gh/${REPO}@main/images/top3.png"
+          PREVIEW_URL="${FIX_URL}?t=${{ github.run_id }}"   # bust cache aperçu
 
-      - name: Done
-        run: echo "✅ Terminé"
+          payload="{\"content\":\"**Leaderboard mis à jour !**\",\"embeds\":[{\"description\":\"Lien fixe : ${FIX_URL}\",\"image\":{\"url\":\"${PREVIEW_URL}\"},\"color\":5814783}]}"
+          http_code=$(curl -sS -o /tmp/resp.txt -w "%{http_code}" \
+            -H "Content-Type: application/json" \
+            -d "$payload" "$WEBHOOK" || true)
+
+          echo "Discord HTTP: $http_code"
+          cat /tmp/resp.txt || true
+
+          case "$http_code" in
+            2*) echo "Notification Discord OK." ;;
+            *)  echo "Échec Discord (HTTP $http_code)"; exit 1 ;;
+          esac
