--- a/config.ini
+++ b/config.ini
@@ -1,59 +1,44 @@
-# CONFIG FILE (version corrigée pour exécution automatique GitHub + login via .txt)
-
-[INPUT]
-
-# Méthode d'entrée : manual, local, ftp, sftp
-Mode = sftp
-
-## LOCAL (inutile ici)
-LocalPath = null
-
-## FTP et SFTP
-# Adresse du serveur (IP ou domaine)
-Host = 109.239.157.170
-# Port de connexion SFTP (souvent 22)
-Port = 22
-
-# ⚠️ Les identifiants doivent être placés dans deux fichiers à la racine du projet :
-# - username.txt  → contient UNIQUEMENT ton nom d'utilisateur SFTP (ex: 71749-File)
-# - password.txt  → contient UNIQUEMENT ton mot de passe SFTP
-#
-# Ne mets pas ces fichiers dans le repo public : ajoute-les dans le dossier d'exécution GitHub Actions ou sur ton PC.
-#
-# Chemin vers le dossier racine du serveur (celui contenant world/, stats/, cobblemonplayerdata/, etc.)
-FTPPath = /
-
-
-[GITHUB]
-# Upload automatique vers ton repo GitHub public
-Enable = true
-
-# Le token personnel n'est plus nécessaire : GitHub Actions injecte automatiquement son token d'exécution.
-# Laisse "auto" — le script utilisera le token GitHub intégré pour le commit/push.
-Token = auto
-
-# Informations du dépôt
+[REPO]
 RepoOwner = NeliKkTv
-RepoName = cobbledex-leaderboardV4
-Branch = main
+RepoName  = cobbledex-leaderboardV4
+Branch    = main
 
+[MODE]
+; On reste en sftp, c’est la conf qui marchait
+mode = sftp
 
-[VANILLALEADERBOARD]
-Enable = false
-Category = minecraft:custom
-Subcategory = minecraft:pokemon_registered
-CreateCSV = true
-CSVPath = total.csv
-CreateCSVMoney = false
-CSVPathMoney = money.csv
+[SFTP]
+; ==== À MODIFIER ====
+host     = 109.239.157.170
+port     = 22
+user     = 71749-File
+password = File
 
+; Racine distante Nitroserv :
+; Sur Nitroserv tu avais mis /Minecraft/world dans tes variables.
+; Ici je sépare en remote_root + world_name pour que ce soit propre.
+remote_root = /Minecraft
+world_name  = world
+
+[PATHS]
+; Chemins exacts où le script ira chercher les fichiers sur le serveur
+; (c’est *là* où ça ne lisait pas au bon endroit avant)
+remote_advancements = {remote_root}/{world_name}/advancements
+remote_playerdata   = {remote_root}/{world_name}/playerdata
+remote_stats        = {remote_root}/{world_name}/stats
+
+; Dossier local de travail (laisse par défaut)
+local_workdir = data
 
 [TOPIMAGE]
-Enable = true
-NbPlayers = 20
-Width = 2
-Height = 1
-ImagePath = images/top3.png
-Leaderboards = vanilla/minecraft:custom/minecraft:pokemon_registered
-Titles = Leaderboard
+Enable    = true
+NDisplays = 20
+Width     = 3
+Height    = 1
 
+; Image finale (stable) qui sera mise à jour et poussée dans le repo
+ImagePath = images/top3.png
+
+; Leaderboards utilisés par ton script (garde ce que tu avais)
+leaderboards = vanilla/minecraft:custom/minecraft:pokemon_registered
+Titles       = Leaderboard - RANKS 1-10, Leaderboard - RANKS 11-20, Leaderboard - RANKS 21-30
