--- a/config.ini
+++ b/config.ini
@@ -4,30 +4,30 @@ RepoName  = cobbledex-leaderboardV4
 Branch    = main
 
 [MODE]
-; On reste en sftp, c’est la conf qui marchait
+; Laisse "sftp" — c’est celui que ton script reconnaît
 mode = sftp
 
 [SFTP]
-; ==== À MODIFIER ====
-host     = 109.239.157.170
-port     = 22
-user     = 71749-File
-password = File
+; ==== LECTURE AUTOMATIQUE ====
+; Le script lira automatiquement ces 2 fichiers texte en racine :
+; username.txt  → contient le nom d’utilisateur
+; password.txt  → contient le mot de passe
+host = 109.239.157.170
+port = 22
+userfile = username.txt
+passfile = password.txt
 
-; Racine distante Nitroserv :
-; Sur Nitroserv tu avais mis /Minecraft/world dans tes variables.
-; Ici je sépare en remote_root + world_name pour que ce soit propre.
+; Racine distante Nitroserv
 remote_root = /Minecraft
 world_name  = world
 
 [PATHS]
-; Chemins exacts où le script ira chercher les fichiers sur le serveur
-; (c’est *là* où ça ne lisait pas au bon endroit avant)
+; Chemins exacts des dossiers du serveur
 remote_advancements = {remote_root}/{world_name}/advancements
 remote_playerdata   = {remote_root}/{world_name}/playerdata
 remote_stats        = {remote_root}/{world_name}/stats
 
-; Dossier local de travail (laisse par défaut)
+; Dossier local temporaire
 local_workdir = data
 
 [TOPIMAGE]
@@ -35,10 +35,6 @@ Enable    = true
 NDisplays = 20
 Width     = 3
 Height    = 1
-
-; Image finale (stable) qui sera mise à jour et poussée dans le repo
 ImagePath = images/top3.png
-
-; Leaderboards utilisés par ton script (garde ce que tu avais)
 leaderboards = vanilla/minecraft:custom/minecraft:pokemon_registered
 Titles       = Leaderboard - RANKS 1-10, Leaderboard - RANKS 11-20, Leaderboard - RANKS 21-30
